{
  "version": 4,
  "terraform_version": "1.7.4",
  "serial": 827,
  "lineage": "d5f57a85-3684-d5a8-e5f6-cf913e153267",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:312929131385:internet-gateway/igw-080f4f3590322d432",
            "id": "igw-080f4f3590322d432",
            "owner_id": "312929131385",
            "vpc_id": "vpc-0a3fef7bb8f219598"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.infisical_secrets.my-secrets"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "internet_gateway_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-080f4f3590322d432",
            "id": "r-rtb-0849cf1ef4a3213be1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0849cf1ef4a3213be",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.main",
            "aws_vpc.main",
            "data.infisical_secrets.my-secrets"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:312929131385:route-table/rtb-0849cf1ef4a3213be",
            "id": "rtb-0849cf1ef4a3213be",
            "owner_id": "312929131385",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-080f4f3590322d432",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a3fef7bb8f219598"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main",
            "data.infisical_secrets.my-secrets"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06646066191a46a19",
            "route_table_id": "rtb-0849cf1ef4a3213be",
            "subnet_id": "subnet-0246d46f114c596cd"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.main",
            "aws_subnet.main",
            "aws_vpc.main",
            "data.infisical_secrets.my-secrets"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "firewall",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:312929131385:security-group/sg-0c0f6e8807e9b22d5",
            "description": "Security group for Palo Alto firewall",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c0f6e8807e9b22d5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Ping",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "palo_alto_firewall",
            "name_prefix": "",
            "owner_id": "312929131385",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a3fef7bb8f219598"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main",
            "data.infisical_secrets.my-secrets"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:312929131385:subnet/subnet-0246d46f114c596cd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0246d46f114c596cd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "312929131385",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0a3fef7bb8f219598"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.infisical_secrets.my-secrets"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:312929131385:vpc/vpc-0a3fef7bb8f219598",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0de8ea483ebbdcce5",
            "default_route_table_id": "rtb-0e14f7620b942e3f1",
            "default_security_group_id": "sg-046c0e049b1b38702",
            "dhcp_options_id": "dopt-0f321e7a08d2066cf",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0a3fef7bb8f219598",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e14f7620b942e3f1",
            "owner_id": "312929131385"
          },
          "dependencies": [
            "data.infisical_secrets.my-secrets"
          ]
        }
      ]
    },
    {
      "module": "module.palo_alto_firewall",
      "mode": "managed",
      "type": "aws_instance",
      "name": "palo_alto_firewall",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03810899027cb545e",
            "arn": "arn:aws:ec2:us-east-1:312929131385:instance/i-0014ce8850eb8706d",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 2,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "terraform-20240226195001791000000002",
            "id": "i-0014ce8850eb8706d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "c5n.xlarge",
            "ipv6_address_count": 0,
            "key_name": "deployer-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-06597abbd57c5c17e",
            "private_dns": "ip-10-0-1-41.ec2.internal",
            "private_ip": "10.0.1.41",
            "public_ip": "3.80.249.139",
            "root_block_device": [
              {
                "delete_on_termination": false,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 180,
                "throughput": 0,
                "volume_id": "vol-0e611552fa5786b83",
                "volume_size": 60,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0246d46f114c596cd",
            "tags": {
              "Name": "PaloAltoFirewall"
            },
            "tags_all": {
              "Name": "PaloAltoFirewall"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0c0f6e8807e9b22d5"
            ]
          },
          "dependencies": [
            "aws_key_pair.deployer",
            "aws_s3_bucket.bootstrap_bucket",
            "aws_security_group.firewall",
            "aws_subnet.main",
            "aws_vpc.main",
            "data.infisical_secrets.my-secrets",
            "module.palo_alto_firewall.aws_iam_instance_profile.palo_alto_profile",
            "module.palo_alto_firewall.aws_iam_role.palo_alto_s3_access"
          ]
        }
      ]
    },
    {
      "module": "module.palo_alto_firewall",
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "secondary",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:312929131385:network-interface/eni-0522243721e6c2762",
            "description": "Secondary network interface for Palo Alto Firewall",
            "id": "eni-0522243721e6c2762",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "0e:3d:e6:66:f9:5f",
            "owner_id": "312929131385",
            "private_ip": "10.0.1.103",
            "private_ip_list": [
              "10.0.1.103"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.1.103"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0c0f6e8807e9b22d5"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0246d46f114c596cd"
          },
          "dependencies": [
            "aws_security_group.firewall",
            "aws_subnet.main",
            "aws_vpc.main",
            "data.infisical_secrets.my-secrets"
          ]
        }
      ]
    },
    {
      "module": "module.palo_alto_firewall",
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "third",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:312929131385:network-interface/eni-07c810c038a695d59",
            "description": "Third network interface for Palo Alto Firewall",
            "id": "eni-07c810c038a695d59",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "0e:83:b6:c3:3a:d5",
            "owner_id": "312929131385",
            "private_ip": "10.0.1.52",
            "private_ip_list": [
              "10.0.1.52"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.1.52"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0c0f6e8807e9b22d5"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0246d46f114c596cd"
          },
          "dependencies": [
            "aws_security_group.firewall",
            "aws_subnet.main",
            "aws_vpc.main",
            "data.infisical_secrets.my-secrets"
          ]
        }
      ]
    }
  ]
}